refactor(PollutionLayer)
Large refactors to pollution layer and throughout the codebase
Need to move event handling outside of pollution layer next